--- a/src/Component/UserList/userlist.css
+++ b/src/Component/UserList/userlist.css
@@ -1,5 +1,5 @@
 .userlist-main-div {
-  background-color: whitesmoke;
+  background-color: #F3F5F8;
   padding: 50px;
   width: 100%;
   min-height: 100vh;
@@ -67,7 +67,7 @@ input:focus {
 .table-header-div {
   display: grid;
   grid-template-columns: 22.5% 22.5% 22.5% 22.5% 10%;
-  background-color: #d3d3d3;
+  background-color: #E8EBF0;
   padding: 20px;
   border-radius: 10px;
 }
@@ -102,4 +102,8 @@ input:focus {
   position: absolute;
   height: 100%;
   width: 10px;
+}
+.hideScroll {
+  height: 100vh;
+  overflow: hidden;
 }
